# ai_data_analyst

./: README.md  READMECURSOR.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  server.py
backend/app/agents/: analyst_agent.py  formatter_agent.py  orchestrator.py  sql_agent.py  tools.py
backend/app/core/: orchestrator.py
backend/app/db/: duckdb_loader.py
backend/app/schemas/: build_schema.py
backend/app/utils/: execute_query.py
backend/dataset/: .~lock.customers.csv#  analytics.duckdb  analytics.duckdb.wal
dataset/: analytics.duckdb
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  page.js
frontend/src/app/chat/: page.jsx
frontend/src/components/components/: AreaChartGradient.jsx  BarChart.jsx  BarChartHorizontal.jsx  ChatArea.jsx  ChatUI.jsx  DataTable.jsx  InputBox.jsx  LineChartLinear.jsx  LineChartMultiple.jsx  Message.jsx  Tooltip.jsx
frontend/src/components/ui/: button.jsx
frontend/src/http/: http.js
frontend/src/store/: ReduxProvider.js  store.js
